@@ -22,6 +22,8 @@ reskins-lib-scope-equipment=Reskin equipment
 reskins-lib-scope-items-and-fluids=Reskin items and fluids
 reskins-lib-scope-technologies=Reskin technologies
 
+reskins-lib-display-notifications=Display notifications
+
 
 [mod-setting-description]
 reskins-lib-icon-tier-labeling=Displays colored bars to indicate tier on icons.
@@ -40,6 +42,8 @@ reskins-lib-scope-entities=Enables reskinning of structures, robots and vehicles
 reskins-lib-scope-equipment=Enables reskinning of equipment.
 reskins-lib-scope-items-and-fluids=Enables reskinning of items, fluids and related recipes.
 reskins-lib-scope-technologies=Enables reskinning of technologies.
+
+reskins-lib-display-notifications=Allows for update notifications, and the results of missing Artisanal Reskins mod checks to be displayed.
 
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Progression
